[package]
authors = ["IgnorantCoder <fr052123@gmail.com>", "megumish <megumish@exploitouri.st>"]
edition = "2018"
name = "suzume"
version = "0.1.1"
description = "jwt library"
license = "MIT/Apache-2.0"
repository = "https://github.com/payper-src/suzume"

[dependencies]
serde = "1.0.81"
serde_json = "1.0.33"
serde_derive = "1.0.81"
failure = "0.1.3"
base64 = "0.10.0"
time = "0.1.41"
openssl = "0.10.15"

[dev-dependencies]
reqwest = "0.9.5"
